[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/cli",
  "crates/util",
  "crates/language",
  "crates/gritmodule",
  "crates/gritcache",
  "crates/grit-util",
  "crates/auth",
  "crates/externals",
  "crates/wasm-bindings",
  "crates/marzano_messenger",
  "crates/cli_bin",
]
exclude = ["resources", "vendor/web-tree-sitter", "vendor/tree-sitter-facade"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "upload"
# Whether to install an updater program
install-updater = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
