[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/cli",
  "crates/util",
  "crates/language",
  "crates/gritmodule",
  "crates/gritcache",
  "crates/grit-pattern-matcher",
  "crates/grit-util",
  "crates/auth",
  "crates/externals",
  "crates/wasm-bindings",
  "crates/marzano_messenger",
  "crates/cli_bin",
]
exclude = ["resources", "vendor/web-tree-sitter", "vendor/tree-sitter-facade"]

[workspace.package]
version = "0.1.0"
authors = ["Iuvo AI, Inc."]
description = "GritQL is a query language for searching, linting, and modifying code."
homepage = "https://docs.grit.io/language/overview"
documentation = "https://docs.grit.io/tutorials/gritql"
