[project]
name = "gritql"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.2.0"
dependencies = ["typer>=0.9.0", "httpx>=0.18.2"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]


[tool.poetry]
name = "gritql"
version = "0.2.0"
description = "Python bindings for GritQL"
authors = ["Grit <developers@grit.io>"]
license = "MIT"
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
