[package]
name = "marzano-auth"
version = "0.1.0"
edition = "2021"

[lints]
rust.unused_crate_dependencies = "forbid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
reqwest = { version = "0.11", features = ["json", "blocking"] }
lazy_static = "1.4.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
log = "0.4.19"
chrono = "0.4.26"
marzano-util = { path = "../util" }
