[package]
name = "marzano-auth"
version = "0.1.0"
edition = "2021"

[lints]
rust.unused_crate_dependencies = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json", "blocking"] }
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
chrono = { workspace = true }
marzano-util = { path = "../util" }
