[package]
name = "marzano-auth"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
license = "MIT"

[lints]
rust.unused_crate_dependencies = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
lazy_static = { version = "1.4.0" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.96" }
tokio = { version = "1", features = ["full"] }
log = { version = "0.4.19" }
chrono = { version = "0.4.26" }
marzano-util = { path = "../util" }
