[package]
name = "marzano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
marzano-cli = { path = "../cli", default-features = false }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.40", default-features = false }

[dev-dependencies]
serde_json = "1.0.96"
tempfile = "3.1"
rayon = "1.8.0"
insta = { version = "1.30.0", features = ["yaml", "redactions"] }
predicates = "3.0.3"
fs_extra = "1.3"
ntest = "0.9.0"
regex = "1.7.3"
assert_cmd = "2.0.12"
marzano-gritmodule = { path = "../gritmodule" }

[features]
default = ["marzano-cli/default"]
grit_tracing = [
  "marzano-cli/grit_tracing",
]
docgen = ["marzano-cli/docgen"]
