[package]
name = "marzano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
marzano-cli = { path = "../cli", default-features = false }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
rayon = { workspace = true }
insta = { workspace = true, features = ["yaml", "redactions"] }
predicates = { workspace = true }
fs_extra = { workspace = true }
ntest = { workspace = true }
regex = { workspace = true }
assert_cmd = { workspace = true }
marzano-gritmodule = { path = "../gritmodule" }

[features]
default = ["marzano-cli/default"]
grit_tracing = [
  "marzano-cli/grit_tracing",
]
docgen = ["marzano-cli/docgen"]
