[package]
name = "marzano-core"
version = "0.2.0"
edition = "2021"

[lints]
rust.unused_crate_dependencies = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# todo remove all these since we should be interfacing through the language crate.
[dependencies]
tree-sitter = { path = "../../vendor/tree-sitter-facade", package = "tree-sitter-facade-sg" }
tree-sitter-gritql = { path = "../../vendor/tree-sitter-gritql", optional = true }
marzano-language = { path = "../language", default-features = false }
marzano-util = { path = "../util" }
marzano-externals = { path = "../externals", optional = true }
embeddings = { workspace = true, optional = true }
tracing = { workspace = true, features = [] }
tracing-opentelemetry = { workspace = true, features = [], optional = true }
regex = { workspace = true }
anyhow = { workspace = true }
tree-sitter-traversal = { workspace = true }
itertools = { workspace = true }
im = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
elsa = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
path-absolutize = { workspace = true, features = ["use_unix_paths_on_wasm"], optional = false }
getrandom = { workspace = true, optional = true }

[dev-dependencies]
similar = { workspace = true }
lazy_static = { workspace = true }
insta = { workspace = true, features = ["yaml", "redactions"] }
trim-margin = { workspace = true }
marzano-auth = { path = "../auth" }
walkdir = { workspace = true }

[features]
default = [
  "external_functions",
  "grit-parser",
  "network_requests_common",
  "network_requests",
  "language-parsers",
  "non_wasm",
]
external_functions_common = []
external_functions = ["external_functions_common", "dep:marzano-externals"]
# Use external functions via FFI
external_functions_ffi = ["external_functions_common"]
embeddings = ["dep:embeddings"]
test_ci = ["external_functions"]
test_all = ["embeddings", "external_functions"]
grit_alpha = ["external_functions", "embeddings"]
# Shared network requests - common to all approaches
network_requests_common = ["marzano-util/network_requests_common"]
network_requests = ["network_requests_common", "marzano-util/network_requests"]
network_requests_external = ["network_requests_common", "marzano-util/network_requests_external"]
wasm_core = [ "dep:getrandom", "getrandom/js", "network_requests_external", "external_functions_common", "external_functions_ffi", "marzano-util/external_functions_ffi"]
grit_tracing = ["dep:tracing-opentelemetry"]
language-parsers = ["marzano-language/builtin-parser"]
grit-parser = ["tree-sitter-gritql"]
absolute_filename = []
non_wasm = ["absolute_filename"]
