[package]
name = "marzano-core"
version = "0.2.0"
edition = "2021"

[lints]
rust.unused_crate_dependencies = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# todo remove all these since we should be interfacing through the language crate.
[dependencies]
tree-sitter = { path = "../../vendor/tree-sitter-facade", package = "tree-sitter-facade-sg" }
tree-sitter-gritql = { path = "../../vendor/tree-sitter-gritql", optional = true }
marzano-language = { path = "../language", default-features = false }
marzano-util = { path = "../util" }
marzano-externals = { path = "../externals", optional = true }
embeddings = { git = "https://github.com/getgrit/embeddings.git", optional = true }
grit-util = { path = "../grit-util" }
tracing = { version = "0.1.40", default-features = false, features = [] }
tracing-opentelemetry = { version = "0.22.0", optional = true, default-features = false, features = [
] }

regex = "1.7.3"
anyhow = "1.0.70"
itertools = "0.10.5"
im = "15.1.0"
serde_json = "1.0.96"
serde = { version = "1.0.164", features = ["derive"] }
sha2 = "0.10.8"
elsa = "1.9.0"
rayon = "1.8.0"
log = "0.4.20"
rand = "0.8.5"
path-absolutize = { version = "3.1.1", optional = false, features = [
  "use_unix_paths_on_wasm",
] }
getrandom = { version = "0.2.11", optional = true }

[dev-dependencies]
similar = "2.2.1"
lazy_static = "1.4.0"
insta = { version = "1.30.0", features = ["yaml", "redactions"] }
trim-margin = "0.1.0"
marzano-auth = { path = "../auth" }
walkdir = "2.3.3"

[features]
default = [
  "external_functions",
  "grit-parser",
  "network_requests_common",
  "network_requests",
  "language-parsers",
  "non_wasm",
]
external_functions_common = []
external_functions = ["external_functions_common", "dep:marzano-externals"]
# Use external functions via FFI
external_functions_ffi = ["external_functions_common"]
embeddings = ["dep:embeddings"]
test_ci = ["external_functions"]
test_all = ["embeddings", "external_functions"]
grit_alpha = ["external_functions", "embeddings"]
# Shared network requests - common to all approaches
network_requests_common = ["marzano-util/network_requests_common"]
network_requests = ["network_requests_common", "marzano-util/network_requests"]
network_requests_external = [
  "network_requests_common",
  "marzano-util/network_requests_external",
]
wasm_core = [
  "dep:getrandom",
  "getrandom/js",
  "network_requests_external",
  "external_functions_common",
  "external_functions_ffi",
  "marzano-util/external_functions_ffi",
]
grit_tracing = ["dep:tracing-opentelemetry"]
language-parsers = ["marzano-language/builtin-parser"]
grit-parser = ["tree-sitter-gritql"]
absolute_filename = []
non_wasm = ["absolute_filename"]
