[package]
name = "marzano-graphql"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
license = "MIT"
publish = false

[lints]
rust.unused_crate_dependencies = "warn"

[dependencies]
marzano-auth = { path = "../auth", features = [], default-features = true }
marzano-gritmodule = { path = "../gritmodule" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.96" }
anyhow = { version = "1.0.70" }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
