[package]
name = "grit-pattern-matcher"
description = "Pattern definitions and core matching logic for GritQL"
edition = "2021"
keywords = ["gritql", "ast", "query", "language", "pl"]
repository.workspace = true
version.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
license = "MIT"
publish = true

[lints]
rust.unused_crate_dependencies = "warn"

[dependencies]
anyhow = { version = "1.0.70" }
elsa = { version = "1.9.0" }
getrandom = { version = "0.2.11", optional = true }
grit-util = { path = "../grit-util", version = "0.3.0" }
im = { version = "15.1.0" }
itertools = { version = "0.10.5" }
rand = { version = "0.8.5" }
regex = { version = "1.7.3" }
