[package]
name = "grit_cache"
version = "0.1.0"
edition = "2021"

[lints]
rust.unused_crate_dependencies = "warn"

[dependencies]
marzano-gritmodule = { path = "../gritmodule", features = [
], default-features = false }
anyhow = { workspace = true }
marzano-util = { path = "../util", features = [], default-features = false }

[dev-dependencies]
marzano-util = { path = "../util", features = ["finder"] }
tokio = { workspace = true }
