[package]
name = "grit_cache"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
license = "MIT"

[lints]
rust.unused_crate_dependencies = "warn"

[dependencies]
marzano-gritmodule = { path = "../gritmodule", features = [
], default-features = false }
anyhow = { version = "1.0.70" }
marzano-util = { path = "../util", features = [], default-features = false }

[dev-dependencies]
marzano-util = { path = "../util", features = ["finder"] }
tokio = { version = "1.35.1" }
