[package]
name = "marzano-gritmodule"
version = "0.1.0"
edition = "2021"

[lints]
rust.unused_crate_dependencies = "warn"

[dependencies]
marzano-core = { path = "../core", features = [], default-features = true }
marzano-language = { path = "../language" }
marzano-util = { path = "../util", features = ["finder"] }
tree-sitter = { path = "../../vendor/tree-sitter-facade", package = "tree-sitter-facade-sg" }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
git2 = { version = "0.17.2", default-features = false, features = [
  "vendored-openssl",
] }
lazy_static = { workspace = true }
regex = { workspace = true }
markdown = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
ignore = { workspace = true }
homedir = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
