[package]
name = "marzano-gritmodule"
version = "0.1.0"
edition = "2021"

[lints]
rust.unused_crate_dependencies = "warn"

[dependencies]
marzano-core = { path = "../core", features = [], default-features = true }
marzano-language = { path = "../language" }
marzano-util = { path = "../util", features = ["finder"] }
tree-sitter = { path = "../../vendor/tree-sitter-facade", package = "tree-sitter-facade-sg" }
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = { version = "0.9.25" }
anyhow = { version = "1.0.70" }
rand = { version = "0.8.5" }
git2 = { version = "0.17.2", default-features = false, features = [
  "vendored-openssl",
] }
lazy_static = { version = "1.4.0" }
regex = { version = "1.7.3" }
markdown = { version = "1.0.0-alpha.11" }
tokio = { version = "1", features = ["full"] }
tempfile = { version = "3.7.0" }
log = { version = "0.4.19" }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
ignore = { version = "0.4.20" }
homedir = { version = "0.2.1" }

[dev-dependencies]
insta = { version = "1.30.0", features = ["yaml"] }
